# IA-local-documentaire-RAG-connect

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.local-folder.example.yml  docker-compose.yml  pyproject.toml
backend/: Dockerfile
backend/app/: __init__.py  main.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  exceptions.py  logging.py  middleware.py  security.py
backend/app/db/: init_db.py  session.py
backend/app/models/: audit_log.py  chat_message.py  connector.py  conversation.py  document.py  group.py  mixins.py  sync_run.py  tenant.py  user.py
backend/app/schemas/: auth.py  connector.py  conversation.py  document.py  search.py  system.py
backend/app/services/: audit.py  permissions.py
backend/app/services/connectors/: __init__.py  base.py  factory.py  google_drive.py  local.py  notion.py  sharepoint.py
backend/app/services/embeddings/: base.py  factory.py  mock.py  openai_provider.py
backend/app/services/ingestion/: chunker.py  (+2 more)
backend/app/workers/: queue.py  tasks.py
docker/: backend-entrypoint.sh
docs/: architecture.md  frontend.md
frontend/: .env.local.example  Dockerfile  README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/lib/: api.ts  types.ts
sample_docs/: IT.md  Qualite.md  RH.md  securite-documentaire.md
scripts/: check-dev.ps1  clean.ps1  demo-local.ps1  reset-qdrant.ps1  start-dev.ps1  start-frontend.ps1
tests/: test_app_contract.py  test_chunker.py  test_permissions.py
(+15 files in other folders)
