[project]
name = "docmind"
version = "0.1.0"
description = "Secure enterprise RAG starter for Deep Bleue IA"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.0",
  "asyncpg>=0.29.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "openai>=1.66.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "pypdf>=5.1.0",
  "python-docx>=1.1.2",
  "python-multipart>=0.0.20",
  "email-validator>=2.2.0",
  "google-api-python-client>=2.155.0",
  "google-auth>=2.37.0",
  "msal>=1.31.0",
  "bcrypt>=4.0.0",
  "qdrant-client>=1.18.0,<1.19.0",
  "redis>=5.2.0",
  "rq>=2.0.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "structlog>=24.4.0",
  "tenacity>=9.0.0",
  "uvicorn[standard]>=0.32.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
  "ruff>=0.8.0"
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient` is deprecated:starlette.exceptions.StarletteDeprecationWarning"
]
